<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scaleType="fitXY"
        android:src="@drawable/test1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/img_linkstar_blank" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/name_store_login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_login_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="42dp"
        android:layout_marginTop="300dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:drawableLeft="@drawable/store"
            android:drawablePadding="15dp"
            android:gravity="center_vertical"
            android:text="seventrees"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line_color_gray" />

        <EditText
            android:id="@+id/et_mall_account"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="18dp"
            android:background="@null"
            android:drawableLeft="@drawable/personal"
            android:drawablePadding="15dp"
            android:hint="@string/input_account"
            android:paddingVertical="14dp"
            android:singleLine="true"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line_color_gray" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="18dp">

            <EditText
                android:id="@+id/et_mall_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@null"
                android:drawableLeft="@drawable/pwd"
                android:drawablePadding="15dp"
                android:hint="@string/input_password"
                android:paddingVertical="14dp"
                android:singleLine="true"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/cb_show_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:button="@drawable/selector_checkbox_pwd_showing"
                android:gravity="center"
                android:padding="10dp" />

        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line_color_gray" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/text_style_white_15"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/layout_login_info"
        android:layout_marginHorizontal="42dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/blue_btn_corner_5dp"
        android:text="@string/login_now" />

</RelativeLayout>
