<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.linkstar.app.store.ui.activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/img_home_bg">

                <RelativeLayout
                    android:id="@+id/layout_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="30dp">

                    <ImageView
                        android:id="@+id/img_to_msg_center"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:padding="10dp"
                        android:src="@drawable/icon_message" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/main_title"
                        android:textColor="@color/text_white"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/img_to_setting"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="5dp"
                        android:padding="10dp"
                        android:src="@drawable/icon_set" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/layout_to_total_data"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_below="@+id/layout_1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="40dp"
                    android:layout_marginTop="26dp"
                    android:background="@drawable/circle_white_150_2dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/text_style_white_14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/month_num" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="14285.32"
                        android:textColor="@color/white"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal"
                    android:paddingVertical="16dp">

                    <LinearLayout
                        android:id="@+id/layout_to_online_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/text_style_white_15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0.09"
                            android:textStyle="bold" />

                        <TextView
                            style="@style/text_style_white_12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/online_num" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_to_offline_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/text_style_white_15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="142852.30"
                            android:textStyle="bold" />

                        <TextView
                            style="@style/text_style_white_12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/offline_num" />
                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="26dp">

                <LinearLayout
                    android:id="@+id/layout_order_num_month"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="791"
                        android:textColor="@color/main_color_blue"
                        android:textSize="18sp" />

                    <TextView
                        style="@style/text_style_gray_12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/month_order_num" />
                </LinearLayout>

                <View
                    android:layout_width="1px"
                    android:layout_height="18dp"
                    android:background="@color/line_color_gray" />

                <LinearLayout
                    android:id="@+id/layout_sale_today"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="433.70"
                        android:textColor="@color/main_color_blue"
                        android:textSize="18sp" />

                    <TextView
                        style="@style/text_style_gray_12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/day_num" />
                </LinearLayout>

                <View
                    android:layout_width="1px"
                    android:layout_height="18dp"
                    android:background="@color/line_color_gray" />

                <LinearLayout
                    android:id="@+id/layout_total_custom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1672"
                        android:textColor="@color/main_color_blue"
                        android:textSize="18sp" />

                    <TextView
                        style="@style/text_style_gray_12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/customer_num" />
                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/line_color_gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/activity_color_bg" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/line_color_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="42dp">

                <LinearLayout
                    android:id="@+id/layout_goods_manager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/icon_commodity_management" />

                    <TextView
                        style="@style/text_style_dark_gray_12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/goods_manager" />
                </LinearLayout>

                <View
                    android:layout_width="1px"
                    android:layout_height="40dp"
                    android:background="@color/line_color_gray" />

                <LinearLayout
                    android:id="@+id/layout_order_manager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/icon_order" />

                    <TextView
                        style="@style/text_style_dark_gray_12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/order_manager" />
                </LinearLayout>

                <View
                    android:layout_width="1px"
                    android:layout_height="40dp"
                    android:background="@color/line_color_gray" />

                <LinearLayout
                    android:id="@+id/layout_guide_recruit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/icon_shoppers" />

                    <TextView
                        style="@style/text_style_dark_gray_12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/guide_recruit" />
                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/line_color_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="42dp">

                <LinearLayout
                    android:id="@+id/layout_store_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/icon_stores" />

                    <TextView
                        style="@style/text_style_dark_gray_12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/store_analysis" />
                </LinearLayout>

                <View
                    android:layout_width="1px"
                    android:layout_height="40dp"
                    android:background="@color/line_color_gray" />

                <LinearLayout
                    android:id="@+id/layout_goods_analysis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/icon_product_analysis" />

                    <TextView
                        style="@style/text_style_dark_gray_12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/goods_analysis" />
                </LinearLayout>

                <View
                    android:layout_width="1px"
                    android:layout_height="40dp"
                    android:background="@color/line_color_gray" />

                <LinearLayout
                    android:id="@+id/layout_customer_analysis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/customer" />

                    <TextView
                        style="@style/text_style_dark_gray_12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/customer_analysis" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
